[package]
name = "wayback_web4"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.4.0", features = ["legacy"]}
base64 = "0.13.0"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing","legacy"]}
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
borsh = "1.5.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 